--- a/JS Objects/index.html
+++ b/JS Objects/index.html
@@ -15,9 +15,9 @@
     <span id="u-object-values"></span>
     <span id="u-json-stringify"></span>
    
-    <script src="./script.js"></script>
-    <script src="./objectProtptype.js"></script>
-
+    <!-- <script src="./script.js"></script>
+    <script src="./objectProtptype.js"></script> -->
+        <script src="./prototype.js"></script>
 </body>
 
 </html>
