--- a/JS Async/index.html
+++ b/JS Async/index.html
@@ -13,6 +13,11 @@
     <h3>multiplication: <span id="mul"></span></h3>
     <h3>divition: <span id="div"></span></h3>
 
+
+   <button onclick="getFileInfo(display)">Load page</button>
+    <div id="show-html"></div>
+
     <script src="./callbackFun.js"></script>
+    <script src="./async.js"></script>
 </body>
 </html>
