--- a/JS Async/index.html
+++ b/JS Async/index.html
@@ -17,6 +17,9 @@
    <button onclick="getFileInfo(display)">Load page</button>
     <div id="show-html"></div>
 
+    <h1>Using Promise</h1>
+    <div id="show-pro"></div>
+
     <script src="./callbackFun.js"></script>
     <script src="./async.js"></script>
 </body>
