js timing events example

--- a/JS Browser DOM/inderx.html
+++ b/JS Browser DOM/inderx.html
@@ -12,5 +12,17 @@
 <p>Line-breaks in a popup box.</p>
 
 <button onclick="popup()">Try it</button>
+<br>
+<span>Time-Out Example</span>
+<br>
+<button onclick="startTime()">Start</button>
+<button onclick="stopAlert()">Stop</button>
+
+<br>
+<span>Time-Interval Example</span>
+<br>
+<button onclick="startTimeInterval()">Start</button>
+<button onclick="stopTimeInterval()">Stop</button>
+
 </body>
 </html>
